app/k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: veg-hw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:

      containers:
      - name: django
        image: sealpavel/halloween_vegan_backend
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: static-content
            mountPath: "/halloween_vegan_backend/app/staticfiles"
          - name: media-content
            mountPath: "/halloween_vegan_backend/app/media"

      volumes:
        - name: static-content
          persistentVolumeClaim:
            claimName: static-content-claim
        - name: media-content
          persistentVolumeClaim:
            claimName: media-content-claim
