app/k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: veg-hw
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
