app/k8s/chat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: veg-hw
  annotations:
    nginx.ingress.kubernetes.io/upgrade-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /halloween-vegan-backend/ws/app/chat/
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
