app/k8s/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: veg-hw
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /halloween-vegan-backend/
    nginx.ingress.kubernetes.io/proxy-body-size: "4M"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /halloween-vegan-backend/
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
